# slimQuickParse

./: CMakeLists.txt  Notes.md  README.md  Sequence.cpp  Sequence.h  Sequences.cpp  Sequences.h  Signature.cpp  Signature.h  main.cpp
pythonTests/: tests.py  tests.py~
